# vktest

./: .gitignore  CMakeLists.txt  Makefile.mingw  Makefile.unix  README.md  box.cpp  box.h  debug.cpp  gameobject.h  global.cpp  global.h  main.cpp  renderer.cpp  renderer.h  renderer_init.cpp  renderer_release.cpp  swapchain.cpp  swapchain.h  timer.h  vkstate.cpp  vkstate.h  vkstate_debug.cpp  vkwindow.cpp  vkwindow.h
shaders/: README
shaders/src/: build-mingw.sh  build.sh  test.frag  test.vert
src/: CMakeLists.txt  Makefile.mingw  Makefile.unix  gameobject.h  renderer.h  renderer_init.cpp  renderer_release.cpp  swapchain.h  timer.cpp  utility.cpp  utility.h
src/shaders/: test.frag.spv
src/shaders/src/: test.frag  test.vert
